--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+#werken-xpath
+[![Build Status](https://img.shields.io/travis/Obsidian-StudiosInc/werken-xpath/master.svg?colorA=9977bb&style=plastic)](https://travis-ci.org/Obsidian-StudiosInc/werken-xpath)
+[![Build Status](https://img.shields.io/shippable/5a0a1aa5b2a4270700e2dcde/master.svg?colorA=9977bb&style=plastic)](https://app.shippable.com/projects/5a0a1aa5b2a4270700e2dcde/)
+
 ------------------------------------------------------------------------
 werken.xpath :: Werken JDOM XPath Engine :: README.txt
 ------------------------------------------------------------------------
